--- a/AnchorPosition.html
+++ b/AnchorPosition.html
@@ -23,7 +23,7 @@ img.info-window { max-width: 200px; max-height: 200px; }
 <script type="text/javascript">
 google.maps.event.addDomListener(window, 'load', function() {
 
-  var map = new google.maps.Map(document.getElementById("map_canvas"), {
+  var map = new google.maps.Map(document.getElementById('map_canvas'), {
     zoom: 5,
     center: new google.maps.LatLng(35.6841306, 139.774103),
     mapTypeId: google.maps.MapTypeId.ROADMAP
@@ -56,7 +56,7 @@ google.maps.event.addDomListener(window, 'load', function() {
 <div id="TOP_RIGHT"     data-lat="40.6841306" data-lng="150.774103" class="nodeoverlay">TOP_RIGHT</div>
 <div id="MIDDLE_LEFT"   data-lat="35.6841306" data-lng="130.774103" class="nodeoverlay">MIDDLE_LEFT</div>
 <div id="MIDDLE_CENTER" data-lat="35.6841306" data-lng="140.774103" class="nodeoverlay">MIDDLE_CENTER</div>
-<div id="MIDDLE_RIGHT"  data-lat="35.6841306" data-lng="150.774103" class="nodeoverlay">TOP_RIGHT</div>
+<div id="MIDDLE_RIGHT"  data-lat="35.6841306" data-lng="150.774103" class="nodeoverlay">MIDDLE_RIGHT</div>
 <div id="BOTTOM_LEFT"   data-lat="30.6841306" data-lng="130.774103" class="nodeoverlay">BOTTOM_LEFT</div>
 <div id="BOTTOM_CENTER" data-lat="30.6841306" data-lng="140.774103" class="nodeoverlay">BOTTOM_CENTER</div>
 <div id="BOTTOM_RIGHT"  data-lat="30.6841306" data-lng="150.774103" class="nodeoverlay">BOTTOM_RIGHT</div>
